--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "axios": "^1.2.0",
     "pinia": "^2.0.27",
+    "vee-validate": "^4.0.3",
     "vue": "^3.2.41",
+    "vue-global-api": "^0.4.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
     "less": "^4.1.3",
-    "vite": "^3.2.3"
+    "unplugin-auto-import": "^0.12.0",
+    "vite": "^3.2.3",
+    "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
